--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -6,14 +7,48 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
   <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <style>
+
+    body {
+      text-align: center;
+      background: linear-gradient(to bottom right, red, white);
+    }
+
+    h1 {
+      color: black;
+    }
+
+    h2 {
+      color: white;
+    }
+  </style>
 </head>
 
+
 <body>
+
+<div class="container-fluid">
+    <!-- A grey horizontal navbar that becomes vertical on small screens -->
+    <nav class="navbar navbar-expand-sm bg-light">
+
+        <div class="container-fluid">
+            <!-- Links -->
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="/">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/about">About</a>
+                </li>
+            </ul>
+        </div>
+
+    </nav>
   <h1>Teachable Machine</h1>
-  <p>This is a demonstration of image classification using a model trained with Google's Teachable
-    Machine project. If you cover the camera, this model will classify the image as "nighttime," otherwise will classify
-    anything else as "daytime." </p>
-  <script src="sketch.js"></script>
+  <h2>This is an image classification model where you can sit in front of the screen
+    and speak either gibberish, English, Spanish, or Japanese, and will classify it and show you which language you are speaking. To do this, simply talk into the mic.</h2>
+  <script src="/static/sketch.js"></script>
 </body>
 
 </html>
